--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
   <![endif]-->
 </head>
 
-<div class="navigation">
 
-    <div class="Logo">
-      <h1>Fun Bus</h1></div>
+<div class="container">
 
-      <div class-"directory">
+<header>
+
+      <h1>Fun Bus</h1>
+
         <nav>
-          <a href="">Home</a>
-          <a href="">About Us</a>
-          <a href="">Blog</a>
-          <a href="">Contact</a>
+          <a href="#">Home</a>
+          <a href="#">About Us</a>
+          <a href="#">Blog</a>
+          <a href="#">Contact</a>
         </nav>
-      </div>
-</div>
+
+</header>
 
 <body>
 
@@ -92,4 +93,5 @@
   </footer>
 
 </body>
+</header>
 </html>
